[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Simulator/Resistor.gd" type="Script" id=2]
[ext_resource path="res://Simulator/RestTerminalOne.gd" type="Script" id=3]
[ext_resource path="res://Simulator/RestTerminalTwo.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 2 )

[node name="Resistor" type="Node2D"]
script = ExtResource( 2 )
RESISTANCE = 3.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.269531, 0.382813 )
texture = ExtResource( 1 )

[node name="RestTerminalOne" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="Collider" type="CollisionShape2D" parent="RestTerminalOne"]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="RestTerminalTwo" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="Collider" type="CollisionShape2D" parent="RestTerminalTwo"]
position = Vector2( 0, 12 )
shape = SubResource( 2 )

[node name="R" type="Label" parent="."]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
rect_rotation = 90.0
rect_scale = Vector2( 0.5, 0.5 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="."]
margin_left = 2.0
margin_top = -11.0
margin_right = 11.0
margin_bottom = 3.0
rect_rotation = 90.0
rect_scale = Vector2( 0.25, 0.25 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="."]
margin_left = 2.0
margin_top = 9.0
margin_right = 11.0
margin_bottom = 23.0
rect_rotation = 90.0
rect_scale = Vector2( 0.25, 0.25 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="RestTerminalOne" to="." method="_on_TerminalOne_area_entered"]
[connection signal="nodeVoltageOne" from="RestTerminalOne" to="." method="_on_RestTerminalOne_nodeVoltageOne"]
[connection signal="area_entered" from="RestTerminalTwo" to="." method="_on_TerminalTwo_area_entered"]
[connection signal="nodeVoltageTwo" from="RestTerminalTwo" to="." method="_on_RestTerminalTwo_nodeVoltageTwo"]
